[package]
name = "somen-decode"
version = "0.0.1"
description = "A byte string decoder for somen."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/somen-decode"
keywords = ["parser-combinator", "parser", "decode", "encoding"]
categories = ["parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ['alloc']
alloc = ['somen/alloc']
nightly = []

[dependencies]
# somen = { version = "0.3.0-beta", default_features = false }
somen = { git = "https://github.com/watcol/somen.git", default_features = false }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
