[package]
name = "somen-decode"
version = "0.1.0"
description = "A byte string decoder for somen."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/somen-decode"
keywords = ["parser-combinator", "parser", "decode", "encoding"]
categories = ["parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
somen = { version = "0.3.0", default_features = false }

[dev-dependencies]
futures-executor = "0.3"
